- Send mail for each record in queried ones.
- All header description of source files are updated, and build.sh was adapted them.
- Password policy can be set in the 2nd "option" parameter of IM_Entry function.
  The key is 'password-policy' and the following terms can be applied.
  "useAlphabet useNumber useUpper useLower usePunctuation length(10) notUserName",
- Add Dockerfile for CircleCI.
- Add .gitlab-ci.yml for GitLab CI.
- Update buster.js and package.json for unit testing.
- Avoid outputting an error message in an error log file in case of an invalid request.
- The second parameter of the doAfterCreateToDB method is passed all fields of the newly created record.
  Previously it was just a key field value of new record.
- Avoid outputting messages in an error log file if there is no portal objects on the layout when using 
  FileMaker Server.
- [INFO] FileMaker Server 11 has been deprecated. In the near future, INTER-Mediator will require
  FileMaker Server 12 or later if using FileMaker Server.
- [SECURITY FIX] Update FileUploader.php to prevent the HTTP header injection in PHP's header() for 
  Internet Explorer and PHP 5.2.x/PHP 5.3.x (Fixed in PHP 5.4.38, PHP 5.5.22 and PHP 5.6.6).
- [BUG FIX] Fix detection of params.php file.
- [BUG FIX] Fix loading DB_TextFile class. The affected version is 5.2 only.
- [BUG FIX] Modify INTERMediator.totalRecordCount after IMLibPageNavigation.deleteRecordFromNavi method.
- [BUG FIX] Fix detecting the Post Only Mode when the value of the enclosure's data-im-control element
  is "enclosure post".
- [BUG FIX] Fix not to remove focus from input field on the Post Only Mode when using validation in some 
  cases.
- [BUG FIX] Definition File Editor can store the some values that are as array.
- [BUG FIX] If the "key" key wasn't supplied, the calculation goes wrong results.
- [BUG FIX] Fix buildup.sh to include "themes" directory correctly. The affected version is 5.2 only.

Ver.5.2 (August 24, 2015)