@@ -117,5 +117,5 @@ IM_Entry(
 //        ),
     ),
     array('db-class' => 'PDO'),
-    2
+    false
 );
