@@ -14,12 +14,13 @@
     <meta http-equiv="content-type" content="text/html;charset=UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="stylesheet" type="text/css" href="../sample.css"/>
+    <link rel="stylesheet" type="text/css" href="form_auth.css"/>
     <title>INTER-Mediator - Sample - Form Style/MySQL</title>
-    <script src="include_MySQL_Auth.php"></script>
-    <script type="text/javascript"></script>
+    <script type="text/javascript" src="include_MySQL_Auth.php"></script>
+    <script type="text/javascript" src="form_auth.js"></script>
 </head>
-<body onload="if(INTERMediatorOnPage.INTERMediatorCheckBrowser()){INTERMediator.construct(true)}">
-<h1 style="font-weight:bold;color:green">Contact Information Management System</h1>
+<body>
+<h1>Contact Information Management System</h1>
 
 <div id="IM_NAVIGATOR">Navigation Controls by INTER-Mediator</div>
 <table border="1">
