@@ -1,0 +1,14 @@
+/*
+ * INTER-Mediator
+ * Copyright (c) INTER-Mediator Directive Committee (http://inter-mediator.org)
+ * This project started at the end of 2009 by Masayuki Nii msyk@msyk.net.
+ *
+ * INTER-Mediator is supplied under MIT License.
+ * Please see the full license for details:
+ * https://github.com/INTER-Mediator/INTER-Mediator/blob/master/dist-docs/License.txt
+ */
+window.onload = function () {
+    if (INTERMediatorOnPage.INTERMediatorCheckBrowser()) {
+        INTERMediator.construct(true);
+    }
+};
